# InterlockingArea-rs

./: .envrc.dist  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  partitions.csv  pyproject.toml
src/: main.rs
